# P4SyncGit

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
p4gitsync/: .dockerignore  Dockerfile  build.cmd  build.sh  config.example.toml  config.toml  p4gitsync.spec  pyproject.toml  user_mapper_example.py
p4gitsync/docs/: runbook.md
p4gitsync/src/p4gitsync/: __init__.py  __main__.py
p4gitsync/src/p4gitsync/api/: api_server.py  redis_monitor.py
p4gitsync/src/p4gitsync/cli/: service_manager.py  service_registry.py  setup_wizard.py  status_reporter.py
p4gitsync/src/p4gitsync/config/: lfs_config.py  logging_config.py  sync_config.py
p4gitsync/src/p4gitsync/git/: commit_metadata.py  fast_importer.py  git_change_detector.py  git_cli_operator.py  git_operator.py  pygit2_git_operator.py
p4gitsync/src/p4gitsync/lfs/: lfs_object_store.py  lfs_pointer_utils.py
p4gitsync/src/p4gitsync/notifications/: alert_classifier.py  daily_report.py  notifier.py  silence_detector.py
p4gitsync/src/p4gitsync/p4/: merge_analyzer.py  p4_change_info.py  p4_client.py  p4_file_action.py  p4_submitter.py  (+3 more)
p4gitsync/tests/: docker-compose.test.yml  test_commit_builder_lfs.py  test_commit_metadata.py  test_fast_importer.py  test_git_operator.py  test_lfs_object_store.py  test_lfs_pointer_utils.py  test_p4_client.py  test_p4_client_disk.py  test_push_lfs.py  test_reverse_builder_lfs.py  test_service_registry.py  test_state_store.py  test_status_reporter.py
p4gitsync/tests/fixtures/: sample_changelists.json
p4gitsync/tests/integration/: conftest.py
(+56 files in other folders)
